--- a/src/Brainf_ckSharp.Uwp/Controls/Host/Shell.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/Host/Shell.xaml
@@ -4,7 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:toolkitExtensions="using:Microsoft.Toolkit.Uwp.UI.Extensions"
+    xmlns:ui="using:Microsoft.Toolkit.Uwp.UI"
     xmlns:controls="using:Brainf_ckSharp.Uwp.Controls.Windows.UI.Xaml.Controls"
     xmlns:views="using:Brainf_ckSharp.Uwp.Views"
     xmlns:shellHeader="using:Brainf_ckSharp.Uwp.Controls.Host.Header"
@@ -113,7 +113,7 @@
                 <AppBarButton
                     x:Uid="Shell/Run"
                     Label="Run"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource RunIcon}}"
+                    Icon="{ui:FontIcon Glyph={StaticResource RunIcon}}"
                     Foreground="{StaticResource RunBrush}"
                     Click="{x:Bind ViewModel.RunConsoleScript}">
                     <AppBarButton.Resources>
@@ -130,7 +130,7 @@
                 <AppBarButton
                     x:Uid="Shell/Delete"
                     Label="Delete"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource DeleteKeyIcon}}"
+                    Icon="{ui:FontIcon Glyph={StaticResource DeleteKeyIcon}}"
                     Click="{x:Bind ViewModel.DeleteConsoleOperator}">
                     <AppBarButton.KeyboardAccelerators>
                         <KeyboardAccelerator Key="Back"/>
@@ -142,7 +142,7 @@
                 <AppBarButton
                     x:Uid="Shell/Clear"
                     Label="Clear"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource ClearIcon}}"
+                    Icon="{ui:FontIcon Glyph={StaticResource ClearIcon}}"
                     Click="{x:Bind ViewModel.ClearConsoleCommand}">
                     <AppBarButton.KeyboardAccelerators>
                         <KeyboardAccelerator Key="Delete" Modifiers="Control"/>
@@ -156,7 +156,7 @@
                 <AppBarButton
                     x:Uid="Shell/Run"
                     Label="Run"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource RunIcon}}"
+                    Icon="{ui:FontIcon Glyph={StaticResource RunIcon}}"
                     Foreground="{StaticResource RunBrush}"
                     Click="{x:Bind ViewModel.RunIdeScript}">
                     <AppBarButton.Resources>
@@ -170,7 +170,7 @@
                 <AppBarButton
                     x:Uid="Shell/Debug"
                     Label="Debug"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource DebugIcon}}"
+                    Icon="{ui:FontIcon Glyph={StaticResource DebugIcon}}"
                     Foreground="{StaticResource DebugBrush}"
                     Click="{x:Bind ViewModel.DebugIdeScript}">
                     <AppBarButton.Resources>
@@ -189,7 +189,7 @@
                 <AppBarButton
                     x:Uid="Shell/Move"
                     Label="Move"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource MoveIcon}}">
+                    Icon="{ui:FontIcon Glyph={StaticResource MoveIcon}}">
                     <AppBarButton.Tag>
                         <x:Boolean>False</x:Boolean>
                     </AppBarButton.Tag>
@@ -199,7 +199,7 @@
                                 x:Uid="Shell/Up"
                                 Label="Up"
                                 ToolTipService.ToolTip="Up"
-                                Icon="{toolkitExtensions:FontIcon Glyph={StaticResource UpIcon}}"
+                                Icon="{ui:FontIcon Glyph={StaticResource UpIcon}}"
                                 Command="{x:Bind MoveCommand}">
                                 <AppBarButton.CommandParameter>
                                     <windows:VirtualKey>Up</windows:VirtualKey>
@@ -209,7 +209,7 @@
                                 x:Uid="Shell/Down"
                                 Label="Down"
                                 ToolTipService.ToolTip="Down"
-                                Icon="{toolkitExtensions:FontIcon Glyph={StaticResource DownIcon}}"
+                                Icon="{ui:FontIcon Glyph={StaticResource DownIcon}}"
                                 Command="{x:Bind MoveCommand}">
                                 <AppBarButton.CommandParameter>
                                     <windows:VirtualKey>Down</windows:VirtualKey>
@@ -219,7 +219,7 @@
                                 x:Uid="Shell/Left"
                                 Label="Left"
                                 ToolTipService.ToolTip="Left"
-                                Icon="{toolkitExtensions:FontIcon Glyph={StaticResource LeftIcon}}"
+                                Icon="{ui:FontIcon Glyph={StaticResource LeftIcon}}"
                                 Command="{x:Bind MoveCommand}">
                                 <AppBarButton.CommandParameter>
                                     <windows:VirtualKey>Left</windows:VirtualKey>
@@ -229,7 +229,7 @@
                                 x:Uid="Shell/Right"
                                 Label="Right"
                                 ToolTipService.ToolTip="Right"
-                                Icon="{toolkitExtensions:FontIcon Glyph={StaticResource RightIcon}}"
+                                Icon="{ui:FontIcon Glyph={StaticResource RightIcon}}"
                                 Command="{x:Bind MoveCommand}">
                                 <AppBarButton.CommandParameter>
                                     <windows:VirtualKey>Right</windows:VirtualKey>
@@ -241,7 +241,7 @@
                 <AppBarButton
                     x:Uid="Shell/NewLine"
                     Label="New line"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource NewLineIcon}}"
+                    Icon="{ui:FontIcon Glyph={StaticResource NewLineIcon}}"
                     Click="{x:Bind ViewModel.InsertNewLine}">
                     <AppBarButton.Tag>
                         <x:Boolean>False</x:Boolean>
@@ -250,7 +250,7 @@
                 <AppBarButton
                     x:Uid="Shell/Delete"
                     Label="Delete"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource DeleteKeyIcon}}"
+                    Icon="{ui:FontIcon Glyph={StaticResource DeleteKeyIcon}}"
                     Click="{x:Bind ViewModel.DeleteIdeCharacter}">
                     <AppBarButton.Tag>
                         <x:Boolean>False</x:Boolean>
@@ -259,7 +259,7 @@
                 <AppBarButton
                     x:Uid="Shell/Undo"
                     Label="Undo"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource UndoIcon}}">
+                    Icon="{ui:FontIcon Glyph={StaticResource UndoIcon}}">
                     <AppBarButton.Tag>
                         <x:Boolean>False</x:Boolean>
                     </AppBarButton.Tag>
@@ -267,7 +267,7 @@
                 <AppBarButton
                     x:Uid="Shell/Redo"
                     Label="Redo"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource RedoIcon}}">
+                    Icon="{ui:FontIcon Glyph={StaticResource RedoIcon}}">
                     <AppBarButton.Tag>
                         <x:Boolean>False</x:Boolean>
                     </AppBarButton.Tag>
@@ -277,7 +277,7 @@
                 <AppBarButton
                     x:Uid="Shell/UserGuide"
                     Label="User guide"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource UserGuideIcon}}"
+                    Icon="{ui:FontIcon Glyph={StaticResource UserGuideIcon}}"
                     Click="{x:Bind ViewModel.RequestUserGuide}">
                     <AppBarButton.KeyboardAccelerators>
                         <KeyboardAccelerator Key="G" Modifiers="Control"/>
@@ -286,7 +286,7 @@
                 <AppBarButton
                     x:Uid="Shell/UnicodeCharacters"
                     Label="Unicode characters"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource ShowUnicodeMapIcon}}"
+                    Icon="{ui:FontIcon Glyph={StaticResource ShowUnicodeMapIcon}}"
                     Click="{x:Bind ViewModel.RequestUnicodeMap}">
                     <AppBarButton.KeyboardAccelerators>
                         <KeyboardAccelerator Key="U" Modifiers="Control"/>
@@ -296,7 +296,7 @@
                 <AppBarButton
                     x:Uid="Shell/RepeatLastScript"
                     Label="Repeat last script"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource RepeatScriptIcon}}"
+                    Icon="{ui:FontIcon Glyph={StaticResource RepeatScriptIcon}}"
                     Click="{x:Bind ViewModel.RepeatLastConsoleScript}"
                     Visibility="{x:Bind converters:PivotSelectionConverter.ConvertToVisibility(ViewModel.SelectedView, settings:ViewType.Console), Mode=OneWay}">
                     <AppBarButton.KeyboardAccelerators>
@@ -308,7 +308,7 @@
                 <AppBarButton
                     x:Uid="Shell/Restart"
                     Label="Restart"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource RestartIcon}}"
+                    Icon="{ui:FontIcon Glyph={StaticResource RestartIcon}}"
                     Click="{x:Bind ViewModel.RestartConsole}"
                     Visibility="{x:Bind converters:PivotSelectionConverter.ConvertToVisibility(ViewModel.SelectedView, settings:ViewType.Console), Mode=OneWay}">
                     <AppBarButton.KeyboardAccelerators>
@@ -320,7 +320,7 @@
                 <AppBarButton
                     x:Uid="Shell/ClearScreen"
                     Label="Clear screen"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource ClearScreen}}"
+                    Icon="{ui:FontIcon Glyph={StaticResource ClearScreen}}"
                     Click="{x:Bind ViewModel.ClearConsoleScreen}"
                     Visibility="{x:Bind converters:PivotSelectionConverter.ConvertToVisibility(ViewModel.SelectedView, settings:ViewType.Console), Mode=OneWay}">
                     <AppBarButton.KeyboardAccelerators>
@@ -332,27 +332,27 @@
                 <AppBarButton
                     x:Uid="Shell/NewFile"
                     Label="New file"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource NewFileIcon}}"
+                    Icon="{ui:FontIcon Glyph={StaticResource NewFileIcon}}"
                     Visibility="{x:Bind converters:PivotSelectionConverter.ConvertToVisibility(ViewModel.SelectedView, settings:ViewType.Ide), Mode=OneWay}"
                     Click="{x:Bind ViewModel.NewIdeFile}"/>
                 <AppBarSeparator Visibility="{x:Bind converters:PivotSelectionConverter.ConvertToVisibility(ViewModel.SelectedView, settings:ViewType.Ide), Mode=OneWay}"/>
                 <AppBarButton
                     x:Uid="Shell/OpenCodeLibrary"
                     Label="Open code library"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource OpenCodeLibraryIcon}}"
+                    Icon="{ui:FontIcon Glyph={StaticResource OpenCodeLibraryIcon}}"
                     Visibility="{x:Bind converters:PivotSelectionConverter.ConvertToVisibility(ViewModel.SelectedView, settings:ViewType.Ide), Mode=OneWay}"
                     Click="{x:Bind ViewModel.RequestCodeLibrary}"/>
                 <AppBarButton
                     x:Uid="Shell/OpenFile"
                     Label="Open file"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource OpenFileIcon}}"
+                    Icon="{ui:FontIcon Glyph={StaticResource OpenFileIcon}}"
                     Visibility="{x:Bind converters:PivotSelectionConverter.ConvertToVisibility(ViewModel.SelectedView, settings:ViewType.Ide), Mode=OneWay}"
                     Click="{x:Bind ViewModel.OpenFile}"/>
                 <AppBarSeparator Visibility="{x:Bind converters:PivotSelectionConverter.ConvertToVisibility(ViewModel.SelectedView, settings:ViewType.Ide), Mode=OneWay}"/>
                 <AppBarButton
                     x:Uid="Shell/Save"
                     Label="Save"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource SaveIcon}}"
+                    Icon="{ui:FontIcon Glyph={StaticResource SaveIcon}}"
                     Visibility="{x:Bind converters:PivotSelectionConverter.ConvertToVisibility(ViewModel.SelectedView, settings:ViewType.Ide), Mode=OneWay}"
                     Click="{x:Bind ViewModel.SaveFile}">
                     <AppBarButton.KeyboardAccelerators>
@@ -364,7 +364,7 @@
                 <AppBarButton
                     x:Uid="Shell/SaveAs"
                     Label="Save as"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource SaveAsIcon}}"
+                    Icon="{ui:FontIcon Glyph={StaticResource SaveAsIcon}}"
                     Visibility="{x:Bind converters:PivotSelectionConverter.ConvertToVisibility(ViewModel.SelectedView, settings:ViewType.Ide), Mode=OneWay}"
                     Click="{x:Bind ViewModel.SaveFileAs}">
                     <AppBarButton.KeyboardAccelerators>
@@ -377,7 +377,7 @@
                 <AppBarButton
                     x:Uid="Shell/Settings"
                     Label="Settings"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource SettingsIcon}}"
+                    Icon="{ui:FontIcon Glyph={StaticResource SettingsIcon}}"
                     Click="{x:Bind ViewModel.RequestSettings}">
                     <AppBarButton.KeyboardAccelerators>
                         <KeyboardAccelerator Key="I" Modifiers="Control"/>
@@ -386,7 +386,7 @@
                 <AppBarButton
                     x:Uid="Shell/About"
                     Label="About"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource AboutIcon}}"
+                    Icon="{ui:FontIcon Glyph={StaticResource AboutIcon}}"
                     Click="{x:Bind ViewModel.RequestAboutInfo}">
                     <AppBarButton.KeyboardAccelerators>
                         <KeyboardAccelerator Key="A" Modifiers="Control"/>
