--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/Settings/SettingsSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/Settings/SettingsSubPage.xaml
@@ -20,7 +20,7 @@
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     xmlns:controls="using:Brainf_ckSharp.Uwp.Controls.Windows.UI.Xaml.Controls"
     xmlns:sections="using:Brainf_ckSharp.Shared.ViewModels.Controls.SubPages.Settings.Sections"
-    xmlns:markupExtensions="using:Microsoft.Toolkit.Uwp.UI.Extensions"
+    xmlns:ui="using:Microsoft.Toolkit.Uwp.UI"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -59,7 +59,7 @@
                         Padding="2,0,0,0"
                         MinWidth="240"
                         MinHeight="112"
-                        ItemsSource="{markupExtensions:EnumValues Type=enumsSettings:IdeTheme}"
+                        ItemsSource="{ui:EnumValues Type=enumsSettings:IdeTheme}"
                         SelectedItem="{x:Bind IdeTheme, Mode=TwoWay}">
                         <ComboBox.ItemContainerStyle>
                             <Style TargetType="ComboBoxItem">
@@ -122,7 +122,7 @@
                     CornerRadius="0"
                     Margin="0,4,0,0"
                     MinWidth="140"
-                    ItemsSource="{markupExtensions:EnumValues Type=enumsSettings:BracketsFormattingStyle}"
+                    ItemsSource="{ui:EnumValues Type=enumsSettings:BracketsFormattingStyle}"
                     SelectedItem="{x:Bind BracketsFormattingStyle, Mode=TwoWay}">
                     <ComboBox.ItemTemplate>
                         <DataTemplate x:DataType="enumsSettings:BracketsFormattingStyle">
@@ -200,7 +200,7 @@
                     CornerRadius="0"
                     Margin="0,4,0,0"
                     MinWidth="140"
-                    ItemsSource="{markupExtensions:EnumValues Type=interpreterEnums:OverflowMode}"
+                    ItemsSource="{ui:EnumValues Type=interpreterEnums:OverflowMode}"
                     SelectedItem="{x:Bind OverflowMode, Mode=TwoWay}">
                     <ComboBox.ItemTemplate>
                         <DataTemplate x:DataType="interpreterEnums:OverflowMode">
