--- a/src/Brainf_ckSharp.Uwp/Controls/DataTemplates/Brainf_ckMemoryCellChunkTemplate.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/DataTemplates/Brainf_ckMemoryCellChunkTemplate.xaml
@@ -7,7 +7,7 @@
     xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
     xmlns:converters="using:Brainf_ckSharp.Uwp.Converters"
     xmlns:attachedProperties="using:Brainf_ckSharp.Uwp.AttachedProperties"
-    xmlns:extensions="using:Microsoft.Toolkit.HighPerformance.Extensions"
+    xmlns:highPerformance="using:Microsoft.Toolkit.HighPerformance"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -45,7 +45,7 @@
             FontSize="10"
             Style="{StaticResource FontIconTextBlockStyle}"
             Text="{StaticResource MemoryViewerPositionIndicator}"
-            Opacity="{x:Bind extensions:BoolExtensions.ToInt(ViewModel.IsChunkSelected), Mode=OneWay}"
+            Opacity="{x:Bind highPerformance:BoolExtensions.ToByte(ViewModel.IsChunkSelected), Mode=OneWay}"
             Grid.Column="{x:Bind ViewModel.SelectedIndex, Mode=OneWay}">
             <animations:Implicit.Animations>
                 <animations:OffsetAnimation Duration="0:0:0.4"/>
