Fixed struct layout kind for generated builder types

--- a/src/Brainf_ckSharp/Configurations/Configuration.tt
+++ b/src/Brainf_ckSharp/Configurations/Configuration.tt
@@ -1,11 +1,10 @@
 ﻿<#@ template language="C#"
 #><#@ assembly name="System.Core" #>
 using System;
+using System.Runtime.InteropServices;
 using System.Threading;
 using Brainf_ckSharp.Enums;
 using Brainf_ckSharp.Memory.Interfaces;
-
-#pragma warning disable CS0282
 
 namespace Brainf_ckSharp.Configurations
 {
@@ -18,6 +17,7 @@ foreach (var name in names)
     /// <summary>
     /// A model for a <#=name.ToUpper()#> configuration being built
     /// </summary>
+    [StructLayout(LayoutKind.Auto)]
     public readonly ref partial struct <#=name#>Configuration
     {
         /// <summary>
