--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/CodeLibrarySubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Views/CodeLibrarySubPage.xaml
@@ -16,7 +16,7 @@
     xmlns:convertersSubPages="using:Brainf_ckSharp.Uwp.Converters.SubPages"
     xmlns:enums="using:Brainf_ckSharp.Shared.Enums"
     xmlns:ide="using:Brainf_ckSharp.Shared.Models.Ide"
-    xmlns:collections="using:Microsoft.Toolkit.Collections"
+    xmlns:collections="using:CommunityToolkit.Mvvm.Collections"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
