--- a/src/Brainf_ckSharp.Uwp/Controls/DataTemplates/Brainf_ckMemoryCellChunkTemplate.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/DataTemplates/Brainf_ckMemoryCellChunkTemplate.xaml
@@ -7,7 +7,7 @@
     xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
     xmlns:converters="using:Brainf_ckSharp.Uwp.Converters"
     xmlns:attachedProperties="using:Brainf_ckSharp.Uwp.AttachedProperties"
-    xmlns:highPerformance="using:Microsoft.Toolkit.HighPerformance"
+    xmlns:highPerformance="using:CommunityToolkit.HighPerformance"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
