--- a/src/Brainf_ckSharp/Memory/TuringMachineState.ExecutionContext.tt
+++ b/src/Brainf_ckSharp/Memory/TuringMachineState.ExecutionContext.tt
@@ -9,7 +9,7 @@ using System.Diagnostics.Contracts;
 using System.Runtime.CompilerServices;
 using Brainf_ckSharp.Enums;
 using Brainf_ckSharp.Memory.Interfaces;
-using Microsoft.Toolkit.HighPerformance.Extensions;
+using CommunityToolkit.HighPerformance.Extensions;
 
 #pragma warning disable IDE0032
 
